--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
       <!-- nav start -->
       <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[1] backdrop-blur-xl bg-black/15">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
-          <div class="w-full flex flex-row gap-4 justify-center items-center">
-            <div class="px-4 py-3 bg-white/0 font-bold text-2xl text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+          <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
               <a href="#p" class="">Preview</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-2xl text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
               <a href="#au" class="">About us</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-2xl text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
               <a href="#ap" class="">About PROJECT</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-2xl text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
               <a href="#t" class="">Team</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-2xl text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
               <a href="#fg" class="">Funding Goals</a>
             </div>
           </div>
@@ -101,10 +101,10 @@
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center">
-              <h2 class="font-bold text-5xl">About Us</h2>
+              <h2 class="font-bold text-5xl max-md:text-3xl">About Us</h2>
             </div>
             <div class="w-full flex flex-col">
-              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center">
+              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
                 <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
@@ -119,10 +119,10 @@
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center">
-              <h2 class="font-bold text-5xl">About PROJECT NAME</h2>
+              <h2 class="font-bold text-5xl max-md:text-3xl">About PROJECT NAME</h2>
             </div>
             <div class="w-full flex flex-col">
-              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center">
+              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
                 <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
@@ -137,7 +137,7 @@
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center">
-              <h2 class="font-bold text-5xl">Team</h2>
+              <h2 class="font-bold text-5xl max-md:text-3xl">Team</h2>
             </div>
             <div class="w-full grid grid-cols-3 gap-10 max-md:grid-cols-2 max-sm:grid-cols-1">
               <div class="w-full flex flex-col rounded-sm text-center gap-5 justify-start items-center">
@@ -217,7 +217,7 @@
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center">
             <div class="flex-col gap-25 align-center justify-center">
-              <h2 class="font-bold text-5xl">Funding Goals</h2>
+              <h2 class="font-bold text-5xl max-md:text-3xl">Funding Goals</h2>
             </div>
             <div class="w-full grid grid-cols-3 gap-5 max-md:grid-cols-2 max-sm:grid-cols-1">
               <div class="w-full flex flex-col p-5 rounded-sm text-center gap-5 justify-start items-center transition-all ease duration-[0.3s] hover:bg-white/5 hover:shadow-md">
