--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
       <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[1] backdrop-blur-xl bg-black/15">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
           <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
               <a href="#p" class="">Preview</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
               <a href="#au" class="">About us</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
               <a href="#ap" class="">About PROJECT</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
               <a href="#t" class="">Team</a>
             </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85">
+            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
               <a href="#fg" class="">Funding Goals</a>
             </div>
           </div>
