--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en" class="bg-white text-white min-h-screen flex flex-col scroll-smooth font-archivo">
+<html lang="en" class="bg-white text-black min-h-screen flex flex-col scroll-smooth font-Effra">
   <head>
     <!-- general start -->
     <meta charset="utf-8">
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind-config.js"></script>
     <link rel="stylesheet" href="./assets/css/custom.css">
+    <link href = ".\assets\fonts\Effra\woff2\stylesheet.css" rel = "stylesheet" type = "text/css" />
     <!-- other end -->
 
     <!-- fonts and icons start -->
@@ -25,28 +26,53 @@
     <!-- fonts and icons end -->
   </head>
 
-  <body id="top" class="bg-black/85 flex flex-col items-center relative tracking-wide text-base leading-[1.5] break-words text-black/65 dark:text-white/75">
+  <body id="top" class="flex flex-col items-center relative tracking-wide leading-[1.5] break-words">
     <!-- main navbar start -->
     <div id="nav1-component"></div>
     <div id="nav2-component"></div>
     <!-- main navbar end -->
 
+    <!-- nav start -->
+    <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[2] bg-[#8f77f7]">
+      <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
+        <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
+          <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
+            <a href="#p" class="">Preview</a>
+          </div>
+          <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
+            <a href="#au" class="">About us</a>
+          </div>
+          <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
+            <a href="#ap" class="">About PROJECT</a>
+          </div>
+          <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
+            <a href="#t" class="">Team</a>
+          </div>
+          <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
+            <a href="#fg" class="">Funding Goals</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- nav end -->
+
     <!-- main middle start -->
     <div class="w-full flex flex-col grow-[1]">
       <!-- hero start -->
       <div class="w-full flex flex-col min-h-[100vh] justify-center items-center max-md:min-h-[50vh] relative overflow-hidden">
-        <div class="absolute inset-0 w-full h-full blur-sm opacity-[0.05]">
-          <video src="https://video.nostr.build/ab2ec0cea5cbecc473186cc373e0583e412517320aaf6b8cb28bb01b1df2f03a.mp4" autoplay muted loop class="w-full h-full object-cover">
+        <div class="absolute inset-0 w-full h-full bg-white">
+          <!-- <video src="https://video.nostr.build/ab2ec0cea5cbecc473186cc373e0583e412517320aaf6b8cb28bb01b1df2f03a.mp4" autoplay muted loop class="w-full h-full object-cover"> -->
+          <img src="https://files.catbox.moe/gtgjvd.png" class="w-full opacity-[0.5]">
         </div>
-        <div class="z-[1] w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px]">
+        <div class="z-[1] w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] z-[1]">
           <div class="w-full flex flex-col items-center py-10 gap-5">
             <!-- <div class="flex flex-col gap-2 max-w-[500px] px-4">
               <img src=".\assets\images\temp FTC W.png" class="w-full"></img>
             </div> -->
-            <div class="flex flex-col gap-5 items-center">
+            <div class="flex flex-col gap-5 items-center text-[#8f77f7]">
               <h1 class="text-8xl text-center font-bold max-md:text-xl">Hashish Robots</h1>
               <p class="text-3xl text-center font-bold max-md:text-xl">Go on an adventure with your very own created Hashish Robot</p>
-              <p class="font-bold text-md opacity-[0.75] text-center max-w-[800px]">Venturing through multiple realities to uncover each one's truth, ending on knowing THE truth, then repeating the cycle again and again.</p>
+              <!-- <p class="font-bold text-md opacity-[0.75] text-center max-w-[800px]">Venturing through multiple realities to uncover each one's truth, ending on knowing THE truth, then repeating the cycle again and again.</p> -->
             </div>
             <!-- <div class="flex flex-row flex-wrap gap-4 mt-5">
               <a href="" target="_blank" class="py-2 px-4 gap-2 bg-white/15 rounded-sm flex flex-row justify-center items-center transition-all ease duration-[0.3s] hover:bg-white hover:text-black active:bg-white max-md:w-full">
@@ -59,48 +85,25 @@
       </div>
       <!-- hero end -->
 
-      <!-- nav start -->
-      <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[1] backdrop-blur-xl bg-black/15">
-        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
-          <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
-              <a href="#p" class="">Preview</a>
-            </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
-              <a href="#au" class="">About us</a>
-            </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
-              <a href="#ap" class="">About PROJECT</a>
-            </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
-              <a href="#t" class="">Team</a>
-            </div>
-            <div class="px-4 py-3 bg-white/0 font-bold text-white/35 transition-all ease duration-[0.3s] hover:text-white/85 max-md:px-2 max-md:py-1">
-              <a href="#fg" class="">Funding Goals</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- nav end -->
-
       <!-- video start -->
-      <div id="p" class="w-full flex flex-row justify-center items-center py-20">
-        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
-          <div class="w-full flex flex-row gap-4 justify-center items-center">
-            <div class="grow-[1] aspect-[16/9] flex flex-col w-full h-lh justify-end relative overflow-hidden shadow-md">
-              <!-- <video controls="" src="https://video.nostr.build/17cbed9dfc343087ab9427b33e538e865c3a88ee08d9c7526d43a8a512a55db8.mp4"></video> -->
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-          </div>
+      <div id="p" class="w-full flex flex-row justify-center items-center">
+        <div class="grow-[1] aspect-[16/9] flex flex-col w-full h-lh justify-end relative overflow-hidden shadow-md">
+          <!-- <video controls="" src="https://video.nostr.build/17cbed9dfc343087ab9427b33e538e865c3a88ee08d9c7526d43a8a512a55db8.mp4"></video> -->
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
       <!-- video end -->
 
+
+      <div class="relative overflow-hidden">
+        <div class="absolute inset-0 w-full h-full bg-white">
+          <img src="https://files.catbox.moe/nzle4g.png" class="w-full opacity-[0.20]">
+        </div>
       <!-- About us start -->
       <div id="au" class="w-full flex flex-col justify-center items-center py-20">
-        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
+        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
-            <div class="flex-col gap-25 align-center justify-center">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
               <h2 class="font-bold text-5xl max-md:text-3xl">About Us</h2>
             </div>
             <div class="w-full flex flex-col">
@@ -116,9 +119,9 @@
 
       <!-- About the project start -->
       <div id="ap" class="w-full flex flex-col justify-center items-center py-20">
-        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
+        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
-            <div class="flex-col gap-25 align-center justify-center">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
               <h2 class="font-bold text-5xl max-md:text-3xl">About PROJECT NAME</h2>
             </div>
             <div class="w-full flex flex-col">
@@ -131,12 +134,20 @@
         </div>
       </div>
       <!-- About the project end -->
+      </div>
 
+      <div class="relative overflow-hidden">
+        <div class="absolute inset-0 w-full h-full bg-white">
+          <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
+        </div>
       <!-- Team start -->
-      <div id="t" class="w-full flex flex-col justify-center items-center py-20">
+      <div id="t" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
+        <!-- <div class="absolute inset-0 w-full h-full bg-white">
+          <img src="https://files.catbox.moe/nzle4g.png" class="w-full opacity-[0.20]">
+        </div> -->
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
-            <div class="flex-col gap-25 align-center justify-center">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
               <h2 class="font-bold text-5xl max-md:text-3xl">Team</h2>
             </div>
             <div class="w-full grid grid-cols-3 gap-10 max-md:grid-cols-2 max-sm:grid-cols-1">
@@ -145,7 +156,7 @@
                   <img src="https://static.independent.co.uk/2025/08/13/07/newFile.jpg" class="h-full object-cover">
                 </div>
                 <div class="w-full flex flex-col gap-2">
-                  <p class="font-bold">Mostafa Shabaz El Shokri</p>
+                  <p class="font-bold text-2xl">Mostafa Shabaz El Shokri</p>
                 </div>
                 <div class="w-full flex flex-row gap-2 justify-center items-center">
                   <a href="" target="_blank" class="p-2 flex flex-row justify-center items-center text-white/50 transition-all ease duration-[0.3s] hover:text-white/85">
@@ -167,7 +178,7 @@
                   <img src="https://en.meming.world/images/en/f/f7/Short_Keanu_Reeves_%28with_Keanu%29.jpg" class="h-full object-cover">
                 </div>
                 <div class="w-full flex flex-col gap-2">
-                  <p class="font-bold">Mostafa Shabaz El Shokri</p>
+                  <p class="font-bold text-2xl">Mostafa Shabaz El Shokri</p>
                 </div>
                 <div class="w-full flex flex-row gap-2 justify-center items-center">
                   <a href="" target="_blank" class="p-2 flex flex-row justify-center items-center text-white/50 transition-all ease duration-[0.3s] hover:text-white/85">
@@ -189,7 +200,7 @@
                   <img src="https://a2.tvspielfilm.de/imedia/5574/12435574,Sk+2P3ivRtivjMTpKcyxAwcheCSRiPuT6hxISmV7RwkcAH9XAnWzk3K3MRsCKQL9BBXq3BkvpFWmYi22uQ_3mg==.jpg" class="h-full object-cover">
                 </div>
                 <div class="w-full flex flex-col gap-2">
-                  <p class="font-bold">Mostafa Shabaz El Shokri</p>
+                  <p class="font-bold text-2xl">Mostafa Shabaz El Shokri</p>
                 </div>
                 <div class="w-full flex flex-row gap-2 justify-center items-center">
                   <a href="" target="_blank" class="p-2 flex flex-row justify-center items-center text-white/50 transition-all ease duration-[0.3s] hover:text-white/85">
@@ -213,30 +224,34 @@
       <!-- Team end -->
 
       <!-- Funding goals start -->
-      <div id="fg" class="w-full flex flex-col justify-center items-center py-20">
-        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
+      <div id="fg" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
+        <!-- <div class="absolute inset-0 w-full h-full bg-white">
+          <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
+        </div> -->
+        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center">
-            <div class="flex-col gap-25 align-center justify-center">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
               <h2 class="font-bold text-5xl max-md:text-3xl">Funding Goals</h2>
             </div>
             <div class="w-full grid grid-cols-3 gap-5 max-md:grid-cols-2 max-sm:grid-cols-1">
               <div class="w-full flex flex-col p-5 rounded-sm text-center gap-5 justify-start items-center transition-all ease duration-[0.3s] hover:bg-white/5 hover:shadow-md">
-                <h3 class="font-bold">Goal 1</h3>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3 class="font-bold text-[#8f77f7] text-4xl">Goal 1</h3>
+                <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
               <div class="w-full flex flex-col p-5 rounded-sm text-center gap-5 justify-start items-center transition-all ease duration-[0.3s] hover:bg-white/5 hover:shadow-md">
-                <h3 class="font-bold">Goal 2</h3>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3 class="font-bold text-[#8f77f7] text-4xl">Goal 2</h3>
+                <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
               <div class="w-full flex flex-col p-5 rounded-sm text-center gap-5 justify-start items-center transition-all ease duration-[0.3s] hover:bg-white/5 hover:shadow-md">
-                <h3 class="font-bold">Goal 3</h3>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h3 class="font-bold text-[#8f77f7] text-4xl">Goal 3</h3>
+                <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <!-- Funding goals end -->
+      </div>
 
     </div>
     <!-- main middle end -->
