--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
     <!-- fonts and icons end -->
   </head>
 
-  <body id="top" class="flex flex-col items-center relative tracking-wide leading-[1.5] break-words">
-    <!-- main navbar start -->
-    <div id="nav1-component"></div>
-    <div id="nav2-component"></div>
-    <!-- main navbar end -->
+  <body id="top" class="flex flex-col items-center relative tracking-wide leading-[1.5] break-words h-full">
 
     <!-- nav start -->
-    <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[2] bg-[#8f77f7]">
+    <!-- <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[2] bg-[#8f77f7]">
       <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
         <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
           <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
@@ -53,54 +49,44 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- nav end -->
 
     <!-- main middle start -->
-    <div class="w-full flex flex-col grow-[1]">
+    <div class="w-full flex flex-col h-full">
       <!-- hero start -->
-      <div class="w-full flex flex-col min-h-[100vh] justify-center items-center max-md:min-h-[50vh] relative overflow-hidden">
+      <!-- <div class="w-full flex flex-col min-h-[100vh] justify-center items-center max-md:min-h-[50vh] relative overflow-hidden">
         <div class="absolute inset-0 w-full h-full bg-white">
-          <!-- <video src="https://video.nostr.build/ab2ec0cea5cbecc473186cc373e0583e412517320aaf6b8cb28bb01b1df2f03a.mp4" autoplay muted loop class="w-full h-full object-cover"> -->
           <img src="https://files.catbox.moe/gtgjvd.png" class="w-full opacity-[0.5]">
         </div>
         <div class="z-[1] w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] z-[1]">
           <div class="w-full flex flex-col items-center py-10 gap-5">
-            <!-- <div class="flex flex-col gap-2 max-w-[500px] px-4">
-              <img src=".\assets\images\temp FTC W.png" class="w-full"></img>
-            </div> -->
             <div class="flex flex-col gap-5 items-center text-[#8f77f7]">
               <h1 class="text-8xl text-center font-bold max-md:text-xl">Hashish Robots</h1>
               <p class="text-3xl text-center font-bold max-md:text-xl">Go on an adventure with your very own created Hashish Robot</p>
-              <!-- <p class="font-bold text-md opacity-[0.75] text-center max-w-[800px]">Venturing through multiple realities to uncover each one's truth, ending on knowing THE truth, then repeating the cycle again and again.</p> -->
             </div>
-            <!-- <div class="flex flex-row flex-wrap gap-4 mt-5">
-              <a href="" target="_blank" class="py-2 px-4 gap-2 bg-white/15 rounded-sm flex flex-row justify-center items-center transition-all ease duration-[0.3s] hover:bg-white hover:text-black active:bg-white max-md:w-full">
-                <p class="font-semibold text-sm">Learn more</p>
-              </a>
-            </div> -->
           </div>
 
         </div>
-      </div>
+      </div> -->
       <!-- hero end -->
 
       <!-- video start -->
-      <div id="p" class="w-full flex flex-row justify-center items-center">
-        <div class="grow-[1] aspect-[16/9] flex flex-col w-full h-lh justify-end relative overflow-hidden shadow-md">
-          <!-- <video controls="" src="https://video.nostr.build/17cbed9dfc343087ab9427b33e538e865c3a88ee08d9c7526d43a8a512a55db8.mp4"></video> -->
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div id="p" class="w-full h-full max-h-full flex flex-row justify-center items-center">
+        <div class="grow-[1] flex flex-col w-full h-full justify-end relative overflow-hidden shadow-md bg-black">
+          <video controls="" src="https://video.nostr.build/aa4b9bf82b4f5c6b81620a2f3d1a71a207df544751eef364f062bca1488340d0.mp4" class="h-full"></video>
+          <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
         </div>
       </div>
       <!-- video end -->
 
 
       <div class="relative overflow-hidden">
-        <div class="absolute inset-0 w-full h-full bg-white">
+        <!-- <div class="absolute inset-0 w-full h-full bg-white">
           <img src="https://files.catbox.moe/nzle4g.png" class="w-full opacity-[0.20]">
-        </div>
+        </div> -->
       <!-- About us start -->
-      <div id="au" class="w-full flex flex-col justify-center items-center py-20">
+      <!-- <div id="au" class="w-full flex flex-col justify-center items-center py-20">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
@@ -114,11 +100,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- About us end -->
 
       <!-- About the project start -->
-      <div id="ap" class="w-full flex flex-col justify-center items-center py-20">
+      <!-- <div id="ap" class="w-full flex flex-col justify-center items-center py-20">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
@@ -132,19 +118,16 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- About the project end -->
       </div>
 
       <div class="relative overflow-hidden">
-        <div class="absolute inset-0 w-full h-full bg-white">
-          <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
-        </div>
-      <!-- Team start -->
-      <div id="t" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
         <!-- <div class="absolute inset-0 w-full h-full bg-white">
-          <img src="https://files.catbox.moe/nzle4g.png" class="w-full opacity-[0.20]">
+          <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
         </div> -->
+      <!-- Team start -->
+      <!-- <div id="t" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh]">
           <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
             <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
@@ -220,14 +203,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Team end -->
 
       <!-- Funding goals start -->
-      <div id="fg" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
-        <!-- <div class="absolute inset-0 w-full h-full bg-white">
-          <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
-        </div> -->
+      <!-- <div id="fg" class="w-full flex flex-col justify-center items-center py-20 relative overflow-hidden">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
           <div class="w-full flex flex-col gap-12 justify-center items-center">
             <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
@@ -249,7 +229,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Funding goals end -->
       </div>
 
