--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- general start -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hashish Robots</title>
+    <title>Vanished INK</title>
     <link rel="icon" sizes="52x52" href="./assets/images/image.png">
     <!-- general end -->
 
@@ -62,8 +62,8 @@
         <div class="z-[1] w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] z-[1]">
           <div class="w-full flex flex-col items-center py-10 gap-5">
             <div class="flex flex-col gap-5 items-center text-[#8f77f7]">
-              <h1 class="text-8xl text-center font-bold max-md:text-xl">Hashish Robots</h1>
-              <p class="text-3xl text-center font-bold max-md:text-xl">Go on an adventure with your very own created Hashish Robot</p>
+              <h1 class="text-8xl text-center font-bold max-md:text-xl">Vanished INK</h1>
+              <p class="text-3xl text-center font-bold max-md:text-xl">Go on an adventure with your very own created Vanished INK</p>
             </div>
           </div>
 
