--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <html lang="en" class="bg-white text-black min-h-screen flex flex-col scroll-smooth font-Effra">
-  <head>
-    <!-- general start -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Vanished INK</title>
-    <link rel="icon" sizes="52x52" href="./assets/images/image.png">
-    <!-- general end -->
 
-    <!-- other end -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="tailwind-config.js"></script>
-    <link rel="stylesheet" href="./assets/css/custom.css">
-    <link href = ".\assets\fonts\Effra\woff2\stylesheet.css" rel = "stylesheet" type = "text/css" />
-    <!-- other end -->
+<head>
+  <!-- general start -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Vanished INK</title>
+  <link rel="icon" sizes="52x52" href="./assets/images/image.png">
+  <!-- general end -->
 
-    <!-- fonts and icons start -->
-    <link rel="stylesheet" href="assets/icons/boxicons/fonts/basic/boxicons.css">
-    <link rel="stylesheet" href="assets/icons/boxicons/fonts/brands/boxicons-brands.css">
-    <link rel="stylesheet" href="assets/icons/boxicons/fonts/animations.css">
-    <link rel="stylesheet" href="assets/icons/boxicons/fonts/transformations.css">
+  <!-- other end -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="tailwind-config.js"></script>
+  <link rel="stylesheet" href="./assets/css/custom.css">
+  <link href=".\assets\fonts\Effra\woff2\stylesheet.css" rel="stylesheet" type="text/css" />
+  <!-- other end -->
 
-    <link rel="stylesheet" href="assets/icons/fontawesome/css/all.css">
+  <!-- fonts and icons start -->
+  <link rel="stylesheet" href="assets/icons/boxicons/fonts/basic/boxicons.css">
+  <link rel="stylesheet" href="assets/icons/boxicons/fonts/brands/boxicons-brands.css">
+  <link rel="stylesheet" href="assets/icons/boxicons/fonts/animations.css">
+  <link rel="stylesheet" href="assets/icons/boxicons/fonts/transformations.css">
 
-    <link rel="stylesheet" href="assets/icons/lineicons/css/icons.css">
-    <!-- fonts and icons end -->
-  </head>
+  <link rel="stylesheet" href="assets/icons/fontawesome/css/all.css">
 
-  <body id="top" class="flex flex-col items-center relative tracking-wide leading-[1.5] break-words h-full">
+  <link rel="stylesheet" href="assets/icons/lineicons/css/icons.css">
+  <!-- fonts and icons end -->
+</head>
 
-    <!-- nav start -->
-    <!-- <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[2] bg-[#8f77f7]">
+<body id="top" class="flex flex-col items-center relative tracking-wide leading-[1.5] break-words">
+
+  <!-- nav start -->
+  <!-- <div class="w-full flex flex-row justify-center items-center border-y border-white/10 sticky top-0 z-[2] bg-[#8f77f7]">
       <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
         <div class="w-full flex flex-row flex-wrap text-center gap-4 justify-center items-center text-2xl max-md:text-lg max-md:gap-2">
           <div class="px-4 py-3 bg-white/0 font-bold text-white/85 transition-all ease duration-[0.3s] hover:text-white max-md:px-2 max-md:py-1">
@@ -50,12 +51,12 @@
         </div>
       </div>
     </div> -->
-    <!-- nav end -->
+  <!-- nav end -->
 
-    <!-- main middle start -->
-    <div class="w-full flex flex-col h-full">
-      <!-- hero start -->
-      <!-- <div class="w-full flex flex-col min-h-[100vh] justify-center items-center max-md:min-h-[50vh] relative overflow-hidden">
+  <!-- main middle start -->
+  <div class="w-full flex flex-col">
+    <!-- hero start -->
+    <!-- <div class="w-full flex flex-col min-h-[100vh] justify-center items-center max-md:min-h-[50vh] relative overflow-hidden">
         <div class="absolute inset-0 w-full h-full bg-white">
           <img src="https://files.catbox.moe/gtgjvd.png" class="w-full opacity-[0.5]">
         </div>
@@ -69,22 +70,93 @@
 
         </div>
       </div> -->
-      <!-- hero end -->
+    <!-- hero end -->
 
-      <!-- video start -->
-      <div id="p" class="w-full h-full max-h-full flex flex-row justify-center items-center">
-        <div class="grow-[1] flex flex-col w-full h-full justify-end relative overflow-hidden shadow-md bg-black">
-          <video controls="" src="https://video.nostr.build/aa4b9bf82b4f5c6b81620a2f3d1a71a207df544751eef364f062bca1488340d0.mp4" class="h-full"></video>
-          <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+    <!-- video start -->
+    <div id="p" class="w-full aspect-[16/9] flex flex-row justify-center items-center">
+      <div class="grow-[1] flex flex-col w-full h-full justify-end relative overflow-hidden shadow-md bg-black">
+        <video controls="" src="https://video.nostr.build/aa4b9bf82b4f5c6b81620a2f3d1a71a207df544751eef364f062bca1488340d0.mp4" class="h-full"></video>
+        <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+      </div>
+    </div>
+    <!-- video end -->
+
+
+    <div class="relative overflow-hidden">
+      <div class="absolute inset-0 w-full h-full bg-white">
+          <img src="https://files.catbox.moe/nzle4g.png" class="w-full h-full opacity-[0.20] object-cover">
+        </div>
+
+      <!-- General text start -->
+      <div id="au" class="w-full flex flex-col justify-center items-center py-20">
+        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
+          <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
+              <h2 class="font-bold text-5xl max-md:text-3xl">About Us</h2>
+            </div>
+            <div class="w-full flex flex-col">
+              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
+                <p class="">SoukSawda is a Beirut based cultural initiative working across printmaking, archives, and independent publishing. Since 2017 we have been recovering and reactivating visual and sonic heritage between Beirut and Istanbul,
+                  focusing on materials that rarely make it into institutional memory.
+                  <br><br>
+                  In 2018 we created two early milestones.
+                  Kawkab at The Grand Factory brought together musicians, illustrators, photographers, and emerging printmakers in one experimental gathering. In the same year we hosted Krikor Altonian, one of Ziad Rahbani’s principal actors in Ked,
+                  grounding our work in the city’s living cultural history.
+                  <br><br>
+                  In 2020 we launched an open source production house, a printmaking and research space built for collective use. It was later destroyed in the Beirut port explosion, pushing us to rebuild through mobile setups, collaborations, and
+                  citywide print activations.
+                  <br><br>
+                  By 2023 SoukSawda returned to public space with a new gathering and a growing publishing network. We also launched BANK SoukSawda, a fully copyrighted exhibition reclaiming Lebanon’s erased banking history.
+                  <br><br>
+                  In 2024 and 2025 we expanded into large scale public printing.
+                  At Salon Beirut, thirteen artists printed live throughout the day in our first major activation. A second edition at SIP strengthened our independent publishing platform through workshops, print gatherings, and collaborations with
+                  local creatives.
+                  <br><br>
+                  Today SoukSawda maintains a continually growing archive including sports history, tobacco ephemera, industrial print, commercial documents, underground economies, and rare social materials overlooked elsewhere. Alongside
+                  preservation, we produce exhibitions, limited edition prints, comic publications, audio work, workshops, and open public print events.
+                  <br><br>
+                  SoukSawda remains an active cultural engine where archives, printmaking, and contemporary production meet, keeping memory alive, accessible, and rooted in the communities that created it.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- video end -->
+      <!-- General text end -->
 
+      <!-- General text start -->
+      <div id="au" class="w-full flex flex-col justify-center items-center py-20">
+        <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
+          <div class="w-full flex flex-col gap-12 justify-center items-center max-md:grid-cols-1">
+            <div class="flex-col gap-25 align-center justify-center text-[#8f77f7]">
+              <h2 class="font-bold text-5xl max-md:text-3xl">Vanished Ink</h2>
+            </div>
+            <div class="w-full flex flex-col">
+              <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
+                <p class="">Vanished Ink is a SoukSawda initiative dedicated to reviving Beirut’s erased print heritage through comics, archives, and public printing. The project brings together illustrators, writers, printers, animators, designers,
+                  and music producers who choose to work side by side, valuing human craft at a time when many creatives are displaced or struggling under the pressure of rapid AI automation. Our work protects the space for human-made culture by
+                  grounding it in community, skill, and shared labor.
+                  <br><br>
+                  Working from SoukSawda’s expanding archive of advertisements, bureaucratic papers, street posters, and lost cultural materials, Vanished Ink rebuilds the city’s visual memory through contemporary printmaking and independent
+                  publishing.
+                  <br><br>
+                  What We Produce
+                  <br><br>
+                  Comics
+                  Original comic books built from Beirut’s fragmented visual history, turning restored ephemera into new narrative worlds.
+                  <br><br>
+                  Limited Edition Prints
+                  Handcrafted screenprints made with traditional techniques, custom inks, and high-quality paper, preserving the texture and value of human-made print.
+                  <br><br>
+                  Together, these works form the core of Vanished Ink: rebuilding the past through print, story, and community-driven creation at a moment when many artists and cultural workers are fighting to keep their craft alive.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- General text end -->
 
-      <div class="relative overflow-hidden">
-        <!-- <div class="absolute inset-0 w-full h-full bg-white">
-          <img src="https://files.catbox.moe/nzle4g.png" class="w-full opacity-[0.20]">
-        </div> -->
       <!-- About us start -->
       <!-- <div id="au" class="w-full flex flex-col justify-center items-center py-20">
         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[25vh] z-[1]">
@@ -120,10 +192,10 @@
         </div>
       </div> -->
       <!-- About the project end -->
-      </div>
+    </div>
 
-      <div class="relative overflow-hidden">
-        <!-- <div class="absolute inset-0 w-full h-full bg-white">
+    <div class="relative overflow-hidden">
+      <!-- <div class="absolute inset-0 w-full h-full bg-white">
           <img src="https://files.catbox.moe/0kzlds.png" class="w-full opacity-[0.20]">
         </div> -->
       <!-- Team start -->
@@ -231,25 +303,26 @@
         </div>
       </div> -->
       <!-- Funding goals end -->
-      </div>
-
     </div>
-    <!-- main middle end -->
 
-    <!-- footer start -->
-    <!-- <div class="w-full flex flex-col justify-center items-center border-t border-white/10">
+  </div>
+  <!-- main middle end -->
+
+  <!-- footer start -->
+  <!-- <div class="w-full flex flex-col justify-center items-center border-t border-white/10">
       <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center">
         <div class="w-full flex flex-col gap-12 justify-center items-center">
           ftr
         </div>
       </div>
     </div> -->
-    <!-- footer end -->
+  <!-- footer end -->
 
-    <!-- popups start -->
-    <!-- popups end -->
+  <!-- popups start -->
+  <!-- popups end -->
 
-    <!-- SCRIPTS START-->
-    <!-- SCRIPTS END-->
-  </body>
+  <!-- SCRIPTS START-->
+  <!-- SCRIPTS END-->
+</body>
+
 </html>
