--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             </div>
             <div class="w-full flex flex-col">
               <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
-                <p class="">SoukSawda is a Beirut based cultural initiative working across printmaking, archives, and independent publishing. Since 2017 we have been recovering and reactivating visual and sonic heritage between Beirut and Istanbul,
+                <p class="">SoukSawda is a Beirut based cultural initiative working across printmaking, archives, and independent publishing. Since 2017 we have been recovering and reactivating visual and sonic heritage between Beirut and Istanbul, 
                   focusing on materials that rarely make it into institutional memory.
                   <br><br>
                   In 2018 we created two early milestones.
-                  Kawkab at The Grand Factory brought together musicians, illustrators, photographers, and emerging printmakers in one experimental gathering. In the same year we hosted Krikor Altonian, one of Ziad Rahbani’s principal actors in Ked,
+                  Kawkab at The Grand Factory brought together musicians, illustrators, photographers, and emerging printmakers in one experimental gathering. In the same year we hosted Krikor Altonian, one of Ziad Rahbani’s principal actors in Ked, 
                   grounding our work in the city’s living cultural history.
                   <br><br>
                   In 2020 we launched an open source production house, a printmaking and research space built for collective use. It was later destroyed in the Beirut port explosion, pushing us to rebuild through mobile setups, collaborations, and
@@ -109,11 +109,11 @@
                   By 2023 SoukSawda returned to public space with a new gathering and a growing publishing network. We also launched BANK SoukSawda, a fully copyrighted exhibition reclaiming Lebanon’s erased banking history.
                   <br><br>
                   In 2024 and 2025 we expanded into large scale public printing.
-                  At Salon Beirut, thirteen artists printed live throughout the day in our first major activation. A second edition at SIP strengthened our independent publishing platform through workshops, print gatherings, and collaborations with
-                  local creatives.
+                  At Salon Beirut, thirteen artists printed live throughout the day in our first major activation. A second edition at SIP strengthened our independent publishing platform through workshops, print gatherings, 
+                  and collaborations with local creatives. In 2025 we introduced HONMADE, a sound and publishing label built from our vinyl archive and shaped by the phrase كل مرة ذات الإسطوانة.
                   <br><br>
-                  Today SoukSawda maintains a continually growing archive including sports history, tobacco ephemera, industrial print, commercial documents, underground economies, and rare social materials overlooked elsewhere. Alongside
-                  preservation, we produce exhibitions, limited edition prints, comic publications, audio work, workshops, and open public print events.
+                  Today SoukSawda maintains a continually growing archive including sports history, tobacco ephemera, industrial print, commercial documents, underground economies, and rare social materials overlooked elsewhere. 
+                  Alongside preservation, we produce exhibitions, limited edition prints, audio projects, workshops, and open public print events.
                   <br><br>
                   SoukSawda remains an active cultural engine where archives, printmaking, and contemporary production meet, keeping memory alive, accessible, and rooted in the communities that created it.
                 </p>
@@ -326,3 +326,4 @@
 </body>
 
 </html>
+
