--- a/index.html
+++ b/index.html
@@ -133,22 +133,20 @@
             </div>
             <div class="w-full flex flex-col">
               <div class="w-full flex flex-col rounded-sm text-center text-2xl gap-5 justify-start items-center max-md:text-lg">
-                <p class="">Vanished Ink is a SoukSawda initiative dedicated to reviving Beirut’s erased print heritage through comics, archives, and public printing. The project brings together illustrators, writers, printers, animators, designers,
-                  and music producers who choose to work side by side, valuing human craft at a time when many creatives are displaced or struggling under the pressure of rapid AI automation. Our work protects the space for human-made culture by
-                  grounding it in community, skill, and shared labor.
+                <p class="">Vanished Ink is a SoukSawda initiative reviving Beiruts erased print heritage through comics, archives, and public printing. The project brings illustrators, animators, writers, designers, 
+                  printers, and music producers to work together in one space, building real culture through real craft at a time when many artists are pushed aside by rapid AI automation.
                   <br><br>
-                  Working from SoukSawda’s expanding archive of advertisements, bureaucratic papers, street posters, and lost cultural materials, Vanished Ink rebuilds the city’s visual memory through contemporary printmaking and independent
-                  publishing.
+                  Working from SoukSawdas expanding archive of advertisements, street posters, and forgotten visual fragments, Vanished Ink turns lost material into new stories and hand made prints.
                   <br><br>
                   What We Produce
                   <br><br>
                   Comics
-                  Original comic books built from Beirut’s fragmented visual history, turning restored ephemera into new narrative worlds.
+                  Original comics shaped from Beiruts fragmented visual history.
                   <br><br>
                   Limited Edition Prints
-                  Handcrafted screenprints made with traditional techniques, custom inks, and high-quality paper, preserving the texture and value of human-made print.
+                  Hand crafted prints made with archival memory, honest technique, and contemporary design.
                   <br><br>
-                  Together, these works form the core of Vanished Ink: rebuilding the past through print, story, and community-driven creation at a moment when many artists and cultural workers are fighting to keep their craft alive.
+                  Vanished Ink is a collaborative space where different artists create together and keep human made culture alive.
                 </p>
               </div>
             </div>
@@ -326,4 +324,5 @@
 </body>
 
 </html>
+
 
