--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
                   <br><br>
                   What We Produce
                   <br><br>
-                  Comics
-                  Original comics shaped from Beiruts fragmented visual history.
+                  <h2 class="font-bold text-xl">Comics</h2><br>
+                  Original comics shaped from Beirut’s fragmented visual history stories assembled from ruins, margins, and overlooked archives.
                   <br><br>
-                  Limited Edition Prints
-                  Hand crafted prints made with archival memory, honest technique, and contemporary design.
+                  <h2 class="font-bold text-xl">Limited Edition Prints</h2><br>
+                  Hand-crafted prints rooted in archival memory, honest techniques and contemporary design. Made to last. Made to mean something.
                   <br><br>
-                  Vanished Ink is a collaborative space where different artists create together and keep human made culture alive.
+                  <h2 class="font-bold text-xl">About</h2><br>
+                  Vanished Ink is a collaborative space where artists work together to preserve, reinterpret and keep human-made culture alive.
                 </p>
               </div>
             </div>
@@ -324,5 +325,6 @@
 </body>
 
 </html>
+
 
 
