--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                   <br><br>
                   Working from SoukSawdas expanding archive of advertisements, street posters, and forgotten visual fragments, Vanished Ink turns lost material into new stories and hand made prints.
                   <br><br>
-                  What We Produce
-                  <br><br>
-                  <h2 class="font-bold text-xl">Comics</h2><br>
+                  <h2 class="font-bold text-4xl">What We Produce</h2>
+                  <br>
+                  <h2 class="font-bold text-3xl">Comics</h2>
                   Original comics shaped from Beirut’s fragmented visual history stories assembled from ruins, margins, and overlooked archives.
                   <br><br>
-                  <h2 class="font-bold text-xl">Limited Edition Prints</h2><br>
+                  <h2 class="font-bold text-3xl">Limited Edition Prints</h2>
                   Hand-crafted prints rooted in archival memory, honest techniques and contemporary design. Made to last. Made to mean something.
                   <br><br>
-                  <h2 class="font-bold text-xl">About</h2><br>
+                  <h2 class="font-bold text-3xl">About</h2>
                   Vanished Ink is a collaborative space where artists work together to preserve, reinterpret and keep human-made culture alive.
                 </p>
               </div>
@@ -325,6 +325,7 @@
 </body>
 
 </html>
+
 
 
 
